# pinboarder

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: core.rs  lib.rs
